--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,30 @@
-<html></html>
+<html>
+<body>
+<div style="text-align:center">
+	<h1> Contact Us </h1>
+	<p> Leave us a message and our team will respond in the shortest delay possible </p>
+</div>
+<div class="column">
+	<label for="fname">First Name</label>
+    <input type="text" id="fname" name="firstname" placeholder="Your  first name..">
+	<br>
+    <label for="lname">Last Name</label>
+    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+	<br>
+	<label for="subject"> Your Message </label>
+	<br>
+	<textarea id="subject" name="subject" placeholder="Write something.." style="height:150px"></textarea>
+	<br>
+	<input type="submit" value="Submit">
+</div>
+
+
+
+
+
+
+
+
+
+</body>
+</html>
