Added some simple stuff for css use

--- a/about.html
+++ b/about.html
@@ -1,1 +1,17 @@
-<html></html>
+<html>
+  <head>
+    <title>About Us | Net-Pal</title>
+    <link rel="stylesheet" href="style.css"
+  </head>
+  <body>
+    <aside class="menu_top" id="menu_top1">
+			<a href="home.html">Net-Pal</a>
+			<div id="">
+				<a href="">Ask a Pal</a>
+			</div>
+			<a href="">Become a Pal</a>
+			<a href="about.html" class="html" >About Us</a>
+		</aside>
+    <p>We are the team 15</p>
+  </body>
+</html>
