--- a/home page.html
+++ b/home page.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="Affordable and professional web design">
-	  <meta name="keywords" content="web design, affordable web design, professional web design">
-  	<meta name="author" content="Brad Traversy">
+    <meta name="description" content="freelancing on campus">
+	  <meta name="keywords" content="netpal, uottawa, campus">
+  	<meta name="author" content="Amine Baba">
     <title>Netpal | Welcome</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <header>
@@ -19,7 +19,7 @@
           <ul>
             <li class="current"><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="services.html">Services</a></li>
+            <li><a href="services.html">Pricing</a></li>
           </ul>
         </nav>
       </div>
