added the link to the font

--- a/about.html
+++ b/about.html
@@ -1,7 +1,8 @@
 <html>
   <head>
     <title>About Us | Net-Pal</title>
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:500,600&display=swap" rel="stylesheet">
   </head>
   <body>
     <aside class="menu_top" id="menu_top1">
