--- a/home page.html
+++ b/home page.html
@@ -14,8 +14,8 @@
   <body>
     <header class="menu_top" id="menu_top1">
         <a href="home page.html" class="active">Net-Pal</a>
-	<a href="services.html">Pricing</a>
-	<a href="">Product</a>
+	<a href="pricing.html">Pricing</a>
+	<a href="product.html">Product</a>
 	<a href="about.html">About Us</a>
     </header>
 
