--- a/pricing.html
+++ b/pricing.html
@@ -20,11 +20,17 @@
   clear: both;
 }
 </style>
+<link rel="stylesheet" href="./style.css">
+<link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Quicksand:500,600&display=swap" rel="stylesheet">
 </head>
 <body>
-<div style="text-align:center">
-<h1>  Pricing </h1>
-</div>
+<header class="menu_top" id="menu_top1">
+  <a href="home page.html" >Net-Pal</a>
+	<a href="pricing.html" class="active">Pricing</a>
+	<a href="product.html">Product</a>
+	<a href="about.html">About Us</a>
+</header>
 <div class="row">
   <div class="column" style="background-color:#aaa;">
     <h2>Meal preparation</h2>
