--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
         <a href="home page.html" class="active">Net-Pal</a>
 	<a href="pricing.html">Pricing</a>
 	<a href="product.html">Product</a>
-	<a href="about.html">About Us</a>
+	<a href="about.html" class="active">About Us</a>
     </header>
     <p>We are the team 15</p>
   </body>
