Menu, css and fonts update

--- a/product.html
+++ b/product.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <title>Product Page</title>
+    <link rel="stylesheet" href="./style.css">
+    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:500,600&display=swap" rel="stylesheet">
   </head>
   <style>
 body {background-color: CCCCFF;}
@@ -18,6 +21,12 @@ background-color: #4CAF50; /* Green */
   font-size: 16px;
 </style>
   <body>
+    <header class="menu_top" id="menu_top1">
+        <a href="home page.html" class="active">Net-Pal</a>
+	      <a href="pricing.html">Pricing</a>
+	      <a href="product.html">Product</a>
+	      <a href="about.html">About Us</a>
+    </header>
     <h1 id="title">Take a look at the most Common Jobs</h1>
     <h3>Dog-walking</h3>
     <p>I mean this is self-explanatory but oh well. Because our services are connected to each student email, we have verified identities and you can easily get into contact with someone you can trust to walk your dog. We understand that sometimes you can't walk your dog, so pay another student to do it for you</p>
