--- a/home page.html
+++ b/home page.html
@@ -14,12 +14,12 @@
   </head>
   <body>
     <header class="menu_top" id="menu_top1">
-        <a href="home page.html" class="active">Net-Pal</a>
-    <nav>
-    	<a href="pricing.html">Pricing</a>
-		<a href="product.html">Product</a>
-		<a href="about.html">About Us</a>
-	</nav>
+      <a href="home page.html" class="active"><img class="logo" src="img/logo.jpg"></a>
+      <nav>
+    	 <a href="pricing.html">Pricing</a>
+       <a href="product.html">Product</a>
+       <a href="about.html">About Us</a>
+      </nav>
 
     </header>
 
