First commit in popup page

--- a/popup page.html
+++ b/popup page.html
@@ -8,14 +8,11 @@
   cursor: pointer;
 }
 .popup .popuptext {
+
   width: 200px;
-  background-color: #555;
-  color: #fff;
   text-align: center;
   border-radius: 6px;
   padding: 8px 0;
-  position: absolute;
-  z-index: 1;
   bottom: 125%;
   left: 50%;
   margin-left: -80px;
@@ -23,6 +20,9 @@
 </style>
 </head>
 
-<div class="popup" onclick="myFunction()">Click me to toggle the popup!
-  <span class="popuptext" id="myPopup">A Simple Popup!</span>
+<div class="popup" onclick="myFunction()">Popup!
+<br>
+  <span class="popuptext" id="myPopup"> Subscribe to join our community</span>
 </div>
+
+</html>
