replaced the images

--- a/become.html
+++ b/become.html
@@ -50,7 +50,7 @@ body{
 	color:white;
 	margin-top:70px;
 	margin-bottom:50px;
-	background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('uo_campus.png');
+	background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('/img/uo_campus.png');
 	background-repeat: no-repeat;
 	background-size:100%;
 }
@@ -157,7 +157,7 @@ input{
 				You possess handy skills or you can offer quality services to other campus' inhabitants ?<br>
 				With Net-Pal you can connect to the University students' community and<br> earn money by helping them !
 			</p>
-			<div ><img class="bckg_img" style="width:50%;"src="cooking.jpg"><img class="bckg_img" style="width:50%;" src="tutoring.jpg"></div>
+			<div ><img class="bckg_img" style="width:50%;"src="/img/cooking.jpg"><img class="bckg_img" style="width:50%;" src="/img/tutoring.jpg"></div>
 			<p class="register">
 				Receive the calls for help near your dorms and lounges<br>
 				and if your schedule and abilities match,<br>
@@ -168,13 +168,13 @@ input{
 		<div id="register_overlay" > 
 			<a href="javascript:void(0)" id="closebtn" onclick="closing()">&times;</a>
 			<aside class="menu_top" id="menu_top1">
-						<a href="home.html">Net-Pal</a>
-						<a href="ask.html">Ask a Pal</a>
-						<a href="become.html" class="active">Become a Pal</a>
-						<a href="about.html">About Us</a>
-						<a href="contact.html">Contact</a>
+				<a href="home.html">Net-Pal</a>
+				<a href="ask.html">Ask a Pal</a>
+				<a href="become.html" class="active">Become a Pal</a>
+				<a href="about.html">About Us</a>
+				<a href="contact.html">Contact</a>
 			</aside>
-			<img src="icone_silht.png" class="icone" />
+			<img src="/img/icone_silht.png" class="icone" />
 			<div class="register_overlay-content">
 				Username:<br>
 				<input></input><br><br>
