--- a/become.html
+++ b/become.html
@@ -2,7 +2,7 @@
 	<head>
 		<link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Quicksand:500,600&display=swap" rel="stylesheet">
-		<link href="logo1.jpg" rel="shortcut icon"/>
+		<link href="img/logo1.jpg" rel="shortcut icon"/>
 		<style>
 body{
 	font-family: 'Quicksand', sans-serif;
@@ -50,7 +50,7 @@ body{
 	color:white;
 	margin-top:70px;
 	margin-bottom:50px;
-	background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('/img/uo_campus.png');
+	background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('img/uo_campus.png');
 	background-repeat: no-repeat;
 	background-size:100%;
 }
@@ -96,7 +96,7 @@ main{
 	bottom: 0;
 	overflow-x:hidden;
 	transition: 0.4s;
-	background: linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255, 0.8) ), url('uo_campus.png');
+	background: linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255, 0.8) ), url('img/uo_campus.png');
 	background-position:center;
 	background-repeat: no-repeat;
 	background-size:cover;
@@ -157,7 +157,7 @@ input{
 				You possess handy skills or you can offer quality services to other campus' inhabitants ?<br>
 				With Net-Pal you can connect to the University students' community and<br> earn money by helping them !
 			</p>
-			<div ><img class="bckg_img" style="width:50%;"src="/img/cooking.jpg"><img class="bckg_img" style="width:50%;" src="/img/tutoring.jpg"></div>
+			<div ><img class="bckg_img" style="width:50%;"src="img/cooking.jpg"><img class="bckg_img" style="width:50%;" src="img/tutoring.jpg"></div>
 			<p class="register">
 				Receive the calls for help near your dorms and lounges<br>
 				and if your schedule and abilities match,<br>
@@ -174,7 +174,7 @@ input{
 				<a href="about.html">About Us</a>
 				<a href="contact.html">Contact</a>
 			</aside>
-			<img src="/img/icone_silht.png" class="icone" />
+			<img src="img/icone_silht.png" class="icone" />
 			<div class="register_overlay-content">
 				Username:<br>
 				<input></input><br><br>
