--- a/popup page.html
+++ b/popup page.html
@@ -39,6 +39,7 @@
     <span class="close"> 
 </span>
     <p style= "text-align: center;"> Register now for free and get an offer up to 5% on your first purchase !</p>
+	<img scr=" https://www.uottawa.ca/this-is-uottawa/sites/www.uottawa.ca.this-is-uottawa/files/campus-footbridge.jpg" >
   </div>
 
 </div>
