--- a/aboutR.html
+++ b/aboutR.html
@@ -1,3 +1,7 @@
+
+
+
+
 <!DOCTYPE html>
 <html lang="en"> 
 
@@ -9,6 +13,16 @@
 </head>
 
 <body>
+		<aside class="menu_top" id="menu_top1">
+			<a href="home.html">Net-Pal</a>
+			<a href="ask.html">Ask a Pal</a>
+			<a href="become.html" >Become a Pal</a>
+			<a href="about.html"class="active">About Us</a>
+			<a href="contact.html">Contact</a>
+		</aside>
+		<div class="banniere">
+			<center><span style="border-bottom:8px solid #DB0028; ">About Us</span></center>
+		</div>
 	<h1 id="titre1"> More of NetPal </h1>
 
 	<img class="logo" src="net_pal1.jpg" alt="Suni">
