--- a/become.html
+++ b/become.html
@@ -146,7 +146,7 @@ input{
 			<a href="home.html">Net-Pal</a>
 			<a href="ask.html">Ask a Pal</a>
 			<a href="become.html" class="active">Become a Pal</a>
-			<a href="about.html">About Us</a>
+			<a href="aboutR.html">About Us</a>
 			<a href="contact.html">Contact</a>
 		</aside>
 		<div class="banniere">
