--- a/contact.html
+++ b/contact.html
@@ -13,11 +13,15 @@
 			<a href="home.html">Net-Pal</a>
 			<a href="ask.html">Ask a Pal</a>
 			<a href="become.html" >Become a Pal</a>
-			<a href="about.html">About Us</a>
+			<a href="aboutR.html">About Us</a>
 			<a href="contact.html"class="active">Contact</a>
 		</aside>
 	      </div>
+	      <div class="banniere">
+			<center><span style="border-bottom:8px solid #DB0028; ">Contact Us</span></center>
+		</div>
     	</header>
+
 		<div style="text-align:center">
 			<h1> Contact Us </h1>
 			<p> Leave us a message and our team will respond in the shortest delay possible </p>
