--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
         </div>
         <nav>
           <ul>
-            <li class="current"><a href="index.html">Home</a></li>
-            <li><a href="contact.html">Contact us </a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="pricing.html">Pricing</a></li>
+            <li class = "current"><a href="index.html">Net-Pal</a></li>
+            <a href="services.html">Services</a>
+            <a href="become.html" >Become a Pal</a>
+            <a href="aboutR.html"class="active">About Us</a>
+            <a href="contact.html">Contact</a>
           </ul>
         </nav>
       </div>
@@ -29,8 +30,8 @@
 
     <section id="lumieres">
       <div class="boite">
-        <h1>netpal, my daily companion</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu luctus ipsum, rhoncus semper magna. Nulla nec magna sit amet sem interdum condimentum.</p>
+        <h1>Netpal, my daily companion</h1>
+        <p>To make your life at the university easier</p>
       </div>
     </section>
 
@@ -48,18 +49,18 @@
       <div class="boite">
         <div class="petite_boite">
           <a href="services.html"><img class ="icon" src="logo_bouffe.jpg"></a>
-          <h3>bouffe</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
+          <h3>Mealprep</h3>
+          <p>Struggling with keeping a balanced diet in times of stress ? Try our mealprep service !</p>
         </div>
         <div class="petite_boite">
           <a href="services.html"><img class ="icon" src="logo_chien.jpg"></a>
-          <h3>chien</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
+          <h3>Dogwalking</h3>
+          <p>Don't have time to take your dog for a walk ? We can do that !</p>
         </div>
         <div class="petite_boite">
           <a href="services.html"><img class ="icon" src="logo_tuto.jpg"></a>
-          <h3>tuto</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
+          <h3>Tutoring</h3>
+          <p>Get a tutor to help you throught your exams !</p>
         </div>
       </div>
     </section>
