fudhwill be ignored, and an empty message aborts the commit.

--- a/aboutR.html
+++ b/aboutR.html
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-	<canvas id="c"></canvas>
 		<aside class="menu_top" id="menu_top1">
 			<a href="home.html">Net-Pal</a>
 			<a href="ask.html">Ask a Pal</a>
@@ -26,8 +25,8 @@
 		</div>
 	<h1 id="titre1"> More of NetPal </h1>
 	
-	<img class="logo" src="net_pal1.jpg" alt="Suni">
-	<small id=img1_title>Our not-official logo</small>
+	<img class="logo" src="net_pal1.jpg" alt="Suni" style="display: inline;">
+
 
 	<p ><em>Marketplace</em> designed and exclusive to university/college students.The marketplace will display products, tasks, and events; all of which are targeted to students.  This <strong>increases security</strong>, due to encouraging students to trade in campus. There is also an existing validating system such as student numbers that can easily verify users, increasing trust. Revenue can be acquired through obtaining account fees, % of an exchange, ads hosted by businesses. </p>
 	<h4>What is NetPal?</h4>
@@ -53,13 +52,16 @@
 </body>
 
 <footer id="fin">
-<h5>FOLLOW US</h5>
-<img alt="Facebook" title="Follow us on Facebook" class="synved-share-image synved-social-image synved-social-image-follow" width="48" height="48" style="display: inline; width:48px;height:48px; margin: 0; padding: 0; border: none; box-shadow: none;" src="img/facebook.png">
-<img alt="instagram" title="Check out our instagram feed" class="synved-share-image synved-social-image synved-social-image-follow" width="48" height="48" style="display: inline; width:48px;height:48px; margin: 0; padding: 0; border: none; box-shadow: none;" src="img/instagram.png">
-<img alt="linkedin" title="NetPal on LinkedIn" class="synved-share-image synved-social-image synved-social-image-follow" width="48" height="48" style="display: inline; width:48px;height:48px; margin: 0; padding: 0; border: none; box-shadow: none;" src="img/linkedin.png">
-<div>
-<img alt="Gmail" title="NetPal on Gmail" class="synved-share-image synved-social-image synved-social-image-follow" width="48" height="48" style="display: inline; width:48px;height:48px; margin: 0; padding: 0; border: none; box-shadow: none;" src="img/gmail.png">
+<h3>INFORMATION</h3>
+<h5>CONTACT US</h5>
+<a href="contact.html" target="_blank" ><img alt="Gmail" title="NetPal on Gmail" class="synved-share-image synved-social-image synved-social-image-follow" width="48" height="48" style="display: inline; width:48px;height:48px; margin: 0; padding: 0; border: none; box-shadow: none;" src="img/gmail.png"></a>
 <h5>1-800-NETP (1-800-6387)</h5>
+
+<h5 style="text-align: center">FOLLOW US</h5>
+<a href="https://fb.me/NetPalapp" target="_blank" ><img alt="Facebook" title="Follow us on Facebook" class="synved-share-image synved-social-image synved-social-image-follow" width="48" height="48" style=" width:48px;height:48px; margin: 0; padding: 0; border: none; box-shadow: none; text-align: center;" src="img/facebook.png"></a>
+<a href="https://www.instagram.com/netpal.community/" target="_blank" ><img alt="instagram" title="Check out our instagram feed" class="synved-share-image synved-social-image synved-social-image-follow" width="48" height="48" style="display: inline; width:48px;height:48px; margin: 0; padding: 0; border: none; box-shadow: none; text-align: center;" src="img/instagram.png"></a>
+<a href="https://www.linkedin.com/company/netpal
+" target="_blank" ><img alt="linkedin" title="NetPal on LinkedIn" class="synved-share-image synved-social-image synved-social-image-follow" width="48" height="48" style="display: inline; width:48px;height:48px; margin: 0; padding: 0; border: none; box-shadow: none; text-align: center;" src="img/linkedin.png"></a>
 </footer>
 
 </html>
