--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav>
           <ul>
             <li class = "current"><a href="index.html">Net-Pal</a></li>
-            <a href="services.html">Services</a>
+            <a href="product.html">Services</a>
             <a href="become.html" >Become a Pal</a>
             <a href="aboutR.html"class="active">About Us</a>
             <a href="contact.html">Contact</a>
