--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="icon" href="logo_tuto">
   </head>
   <body>
-<<<<<<< HEAD
     <header>
       <div class="boite">
         <div id="titre">
@@ -21,22 +20,13 @@
           <ul>
             <li class = "current"><a href="index.html">Net-Pal</a></li>
             <a href="product.html">Services</a>
-            <a href="become.html" >Become a Pal</a>
+            <a href="become.htmsl" >Become a Pal</a>
             <a href="aboutR.html"class="active">About Us</a>
             <a href="contact.html">Contact</a>
           </ul>
         </nav>
       </div>
     </header>
-=======
-    <aside class="menu_top" id="menu_top1">
-		<a href="index.html" class="active">Net-Pal</a>
-		<a href="product.html">Ask a Pal</a>
-		<a href="become.html">Become a Pal</a>
-		<a href="aboutR.html">About Us</a>
-		<a href="contact.html">Contact</a>
-	</aside>
->>>>>>> ad217bb8eb33e9924dedaa40ccd5b2bd894cc097
 
     <section id="lumieres">
       <div class="boite">
