--- a/popup page.html
+++ b/popup page.html
@@ -6,24 +6,33 @@
 .popup { 
   position: relative;
   display: none;
-  width: 100%;
-  bottom: 50%;
-  left: 0;
-  top: 200;
-  height: 500%;
   cursor: pointer;
   
 }
 
 .popup-content {
   background-color: #ffffff;
-  margin: auto;
-  padding: 20px;
-  border: 10px solid #888;
-  width: 80%
+  margin: 20% auto;
+  padding: 20 %;
+  border-style: solid ;
+  border-width: 2px 2px 2px 2px;
+  height: 600;
+  width: 1100;
+  
+  
+
+}
+img {
+  float: left;
+}
+p{
+  vertical-align: middle;
+  float: right;  
+  padding-top: 15%;
 
 }
 
+ 
 
 </style>
 </head>
@@ -36,10 +45,13 @@
 
   <!-- Modal content -->
   <div class="popup-content">
-    <span class="close"> 
+    <span class="close">&times;
 </span>
-    <p style= "text-align: center;"> Register now for free and get an offer up to 5% on your first purchase !</p>
-	<img scr=" https://www.uottawa.ca/this-is-uottawa/sites/www.uottawa.ca.this-is-uottawa/files/campus-footbridge.jpg" >
+	<img src=" https://www.uottawa.ca/this-is-uottawa/sites/www.uottawa.ca.this-is-uottawa/files/campus-footbridge.jpg" ><font size="20">
+    <p style= "text-align: right;">  Register now for free <br>
+	and get an offer up to  
+<br>	10%
+<br>  on your first purchase! </font> </p>
   </div>
 
 </div>
